Iseq#to_binary: Add support for NoMatchingPatternError and TypeError

Binary dumping the iseq for `case foo in []; end` used to crash as
there was no handling for these exception classes.

Pattern matching generates these classes as operands to `putobject`.

[Bug #16088]
Closes: https://github.com/ruby/ruby/pull/2325